agregar imagenes correctas

--- a/Grupo Protekta/index.html
+++ b/Grupo Protekta/index.html
@@ -382,7 +382,7 @@
                     </div>
                 </div>
                 <div class="portfolio-card">
-                    <div class="portfolio-image music"></div>
+                    <div class="portfolio-image GESTION"></div>
                     <div class="portfolio-content">
                         <h3 class="portfolio-title">Gestión y Administración de Estacionamientos</h3>
                         <p class="portfolio-description">Control de accesos riguroso y monitoreo constante para garantizar la seguridad de los vehículos y usuarios. Brindando facilidades dar acceso rápido a los espacios disponibles, reduciendo tiempos de espera y estrés para los usuarios.</p>
