--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             </div>
                             <div class="skill-node">
                                 <div class="skill-icon">⭐</div>
-                                <div class="skill-name">PROFESIONALES</div>
+                                <div class="skill-name">CALIDAD</div>
                             </div>
                             <div class="skill-node">
                                 <div class="skill-icon">📱</div>
@@ -200,7 +200,7 @@
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">SERVICIOS</h2>
-                <p class="section-subtitle">From curious beginner to seasoned developer - here's how I got here</p>
+                <p class="section-subtitle">Trabajos con resultados reales</p>
             </div>
 
             <div class="timeline-controls">
