--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <h3>INFORMACION</h3>
                         <p>En GRUPO PROTEKTA INTEGRAL, nos especializamos en brindar soluciones completas y personalizadas en servicios de vigilancia privada, limpieza y saneamiento, administración de estacionamientos y gestión de edificios y condominios. </p>
                         <p>Nuestra propuesta se basa en alcanzar altos estándares de calidad, a través de tecnología e innovación, seguridad, orden y eficiencia en cada espacio que gestionamos.  </p>
-                        <p>Nos comprometemos a ofrecer un servicio integral que supere las expectativas de nuestros clientes, adaptándonos a sus necesidades especícas con profesionalismo y responsabilidad.  </p>
+                        <p>Nos comprometemos a ofrecer un servicio integral que supere las expectativas de nuestros clientes, adaptándonos a sus necesidades especificas con profesionalismo y responsabilidad.  </p>
                     </div>
                 </div>
                 
