--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Grupo Protekta</title>
     <link rel="stylesheet" href="tooplate-titan-style.css">
-
 </head>
+
 <body>
     <nav id="navbar">
         <div class="nav-container">
