--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav id="navbar">
         <div class="nav-container">
             <a href="#home" class="logo">
-                <div class="logo-icon">🛡️</div>
+                <img src="images/LogoGrupoProtekta.jpg" class="logo-icon" alt="Logo Grupo Protekta">
                 <div class="logo-text">GRUPO PROTEKTA</div>
             </a>
             <ul class="nav-links">
@@ -135,7 +135,7 @@
                                 <div class="skill-name">EQUIPO</div>
                             </div>
                             <div class="skill-node">
-                                <div class="skill-icon">⭐</div>
+                                <div class="skill-icon">⚡</div>
                                 <div class="skill-name">CALIDAD</div>
                             </div>
                             <div class="skill-node">
@@ -154,7 +154,7 @@
                                 <div class="skill-icon">💡</div>
                                 <div class="skill-name">EFICIENCIA</div>
                             </div>
-                            <div class="skills-center">⚡</div>
+                            <div class="skills-center">⭐</div>
                         </div>
                     </div>
                     
