--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav id="navbar">
         <div class="nav-container">
             <a href="#home" class="logo">
-                <img src="images/LogoGrupoProtekta.jpg" class="logo-icon" alt="Logo Grupo Protekta">
+                <img src="images/logo-grupoprotekta.png" class="logo-icon" alt="Logo Grupo Protekta">
                 <div class="logo-text">GRUPO PROTEKTA</div>
             </a>
             <ul class="nav-links">
