--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Grupo Protekta</title>
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="images/logo-grupoprotekta.png">
+
     <link rel="stylesheet" href="tooplate-titan-style.css">
 </head>
-
 <body>
     <nav id="navbar">
         <div class="nav-container">
