--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="Grupo Protekta: Servicios de seguridad privada, limpieza, gestión de estacionamientos y administración de edificios en Perú. Protección profesional 24/7.">
+    <meta name="keywords" content="seguridad privada, vigilancia, limpieza, estacionamientos, administración de edificios, Grupo Protekta, Trujillo, Perú">
+    <meta name="author" content="Grupo Protekta Integral">
     <title>Grupo Protekta</title>
 
     <!-- Favicon -->
