--- a/index.html
+++ b/index.html
@@ -1,18 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+    <!-- Título SEO -->
+    <title>Grupo Protekta • Seguridad, Limpieza y Gestión Profesional en Perú</title>
+
+    <!-- Descripción SEO -->
     <meta name="description" content="Grupo Protekta: Servicios de seguridad privada, limpieza, gestión de estacionamientos y administración de edificios en Perú. Protección profesional 24/7.">
+
+    <!-- Keywords (ya no son muy usadas pero igual suman un poco) -->
     <meta name="keywords" content="seguridad privada, vigilancia, limpieza, estacionamientos, administración de edificios, Grupo Protekta, Trujillo, Perú">
+
+    <!-- Autor -->
     <meta name="author" content="Grupo Protekta Integral">
-    <title>Grupo Protekta</title>
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/logo-grupoprotekta.png">
 
+    <!-- CSS -->
     <link rel="stylesheet" href="tooplate-titan-style.css">
+
+    <!-- Google Structured Data (SEO Pro Nivel Dios) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Grupo Protekta",
+      "image": "https://www.tu-dominio.com/images/logo-grupoprotekta.png",
+      "url": "https://www.tu-dominio.com",
+      "telephone": "+51977781573",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Jr. Ayacucho 707",
+        "addressLocality": "Trujillo",
+        "addressRegion": "La Libertad",
+        "addressCountry": "Perú"
+      },
+      "description": "Servicios de seguridad privada, limpieza profesional, gestión de estacionamientos y administración integral de edificios en Perú.",
+      "sameAs": [
+        "https://facebook.com/GrupoProtektaIntegral",
+        "https://instagram.com/grupoprotekta"
+      ]
+    }
+    </script>
+
 </head>
+
 <body>
     <nav id="navbar">
         <div class="nav-container">
