--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="hero-content">
             <h1>Grupo Protekta</h1>
             <p class="subtitle">Evaluamos tus NECESIDADES Optimizamos TU NEGOCIO</p>
-            <p>SEGURIDAD  | LIMPIEZA | ADMINISTRACION DE EDIFICIOS | PARKING</p>
+            <p>SEGURIDAD  | LIMPIEZA | ADMINISTRACION DE ENTRADAS | PARKING</p>
             <div class="cta-buttons">
                 <a href="#portfolio" class="cta-primary">Nuestro Trabajo</a>
                 <a href="#contact" class="cta-secondary">Contactenos</a>
@@ -458,7 +458,7 @@
                             <li>Vigilancia Privada 24/7</li>
                             <li>Limpieza y Saneamiento</li>
                             <li>Gestión de Estacionamientos</li>
-                            <li>Administración de Edificios</li>
+                            <li>Administración de Entradas y Salidas</li>
                         </ul>
                     </div>
 
