--- a/index.html
+++ b/index.html
@@ -238,142 +238,106 @@
         </div>
     </section>
 
-    <section id="timeline" class="fade-in">
+    <section id="services" class="fade-in">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title">SERVICIOS</h2>
-                <p class="section-subtitle">Trabajos con resultados reales</p>
+                <h2 class="section-title">NUESTROS SERVICIOS</h2>
+                <p class="section-subtitle">Soluciones integrales diseñadas para su tranquilidad</p>
             </div>
 
-            <div class="timeline-controls">
-                <button class="timeline-filter active" data-filter="all">SEGURIDAD</button>
-                <button class="timeline-filter" data-filter="education">LIMPIEZA</button>
-                <button class="timeline-filter" data-filter="work">GESTION</button>
-                <button class="timeline-filter" data-filter="project">TECNOLOGIA</button>
+            <div class="services-filter-container">
+                <button class="service-filter-btn active" data-filter="all">TODOS</button>
+                <button class="service-filter-btn" data-filter="seguridad">SEGURIDAD</button>
+                <button class="service-filter-btn" data-filter="limpieza">LIMPIEZA</button>
+                <button class="service-filter-btn" data-filter="gestion">GESTIÓN</button>
+                <button class="service-filter-btn" data-filter="tecnologia">TECNOLOGÍA</button>
             </div>
 
-            <div class="timeline-container">
-                <div class="timeline-line"></div>
-                <div class="timeline-progress"></div>
-
-                <div class="timeline-item" data-category="education">
-                    <div class="timeline-node">🛡️</div>
-                    <div class="timeline-content">
-                         <div class="timeline-year">DISPONIBILIDAD 24/7</div>
-                        <h3 class="timeline-title">VIGILANCIA PRIVADA</h3>
-                        <div class="timeline-company"> Protección Total</div>
-                        <p class="timeline-description">
-                            Protección 24/7 con personal élite certificado, patrullaje preventivo y respuesta inmediata ante cualquier emergencia o situación de riesgo.
-                        </p>
-                        <div class="timeline-skills">
-                            <span class="timeline-skill">Patrullaje</span>
-                            <span class="timeline-skill">Guardias</span>
-                            <span class="timeline-skill">Emergencias</span>
-                            <span class="timeline-skill">Seguridad</span>
-                        </div>
-                        <div class="timeline-achievements">
-                            <div class="timeline-achievement">Personal certificado y entrenado</div>
-                            <div class="timeline-achievement">Respuesta en menos de 3 minutos</div>
-                            <div class="timeline-achievement">Cobertura continua sin interrupciones</div>
-                        </div>
+            <div class="services-grid">
+                
+                <div class="service-card" data-category="seguridad">
+                    <div class="card-icon-wrapper">
+                        <span class="card-icon">🛡️</span>
                     </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Vigilancia Privada</h3>
+                        <p class="card-desc">Protección 24/7 con personal élite certificado, patrullaje preventivo y respuesta inmediata ante situaciones de riesgo.</p>
+                        <ul class="card-features">
+                            <li>✅ Guardias Certificados</li>
+                            <li>✅ Respuesta < 3 min</li>
+                            <li>✅ Disponibilidad 24/7</li>
+                        </ul>
+                    </div>
+                    <div class="card-glow"></div>
                 </div>
 
-                <div class="timeline-item" data-category="work">
-                    <div class="timeline-node">⭐</div>
-                    <div class="timeline-content">
-                        <div class="timeline-year">Tecnología Avanzada</div>
-                        <h3 class="timeline-title">CONTROL DE ACCESOS</h3>
-                        <div class="timeline-company"> Gestión Inteligente</div>
-                        <p class="timeline-description">
-                           Registro digital de visitantes, verificación rigurosa de identidades y control automatizado que garantiza que solo personas autorizadas ingresen.
-                        </p>
-                        <div class="timeline-skills">
-                            <span class="timeline-skill">Registro Digital</span>
-                            <span class="timeline-skill">Verificación</span>
-                            <span class="timeline-skill">Biométrico</span>
-                            <span class="timeline-skill">Accesos</span>
-                        </div>
-                        <div class="timeline-achievements">
-                            <div class="timeline-achievement">Sistema digitalizado de entradas</div>
-                            <div class="timeline-achievement">Trazabilidad completa de visitantes</div>
-                            <div class="timeline-achievement">Control riguroso y confiable</div>
-                        </div>
+                <div class="service-card" data-category="gestion">
+                    <div class="card-icon-wrapper">
+                        <span class="card-icon">⭐</span>
                     </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Control de Accesos</h3>
+                        <p class="card-desc">Registro digital de visitantes y verificación rigurosa de identidades para garantizar que solo autorizados ingresen.</p>
+                        <ul class="card-features">
+                            <li>✅ Biometría</li>
+                            <li>✅ Trazabilidad Digital</li>
+                            <li>✅ Reportes Diarios</li>
+                        </ul>
+                    </div>
+                    <div class="card-glow"></div>
                 </div>
 
-                <div class="timeline-item" data-category="project">
-                    <div class="timeline-node">⚡</div>
-                    <div class="timeline-content">
-                        <div class="timeline-year">Vigilancia en Tiempo Real</div>
-                        <h3 class="timeline-title">MONITOREO TECNOLOGICO</h3>
-                        <div class="timeline-company">Supervisión Constante</div>
-                        <p class="timeline-description">
-                            Cámaras HD de última generación, sistemas de alarma integrados y centro de control que supervisa cada rincón sin descanso.
-                        </p>
-                        <div class="timeline-skills">
-                            <span class="timeline-skill">Cámaras HD</span>
-                            <span class="timeline-skill">Alarmas</span>
-                            <span class="timeline-skill">Monitoreo</span>
-                            <span class="timeline-skill">Tiempo Real</span>
-                        </div>
-                        <div class="timeline-achievements">
-                            <div class="timeline-achievement">Vigilancia 24/7 sin puntos ciegos</div>
-                            <div class="timeline-achievement"> Grabación y respaldo en la nube</div>
-                            <div class="timeline-achievement">Alertas automáticas instantáneas</div>
-                        </div>
+                <div class="service-card" data-category="tecnologia">
+                    <div class="card-icon-wrapper">
+                        <span class="card-icon">⚡</span>
                     </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Monitoreo Tecnológico</h3>
+                        <p class="card-desc">Cámaras HD, alarmas integradas y un centro de control (CCTV) que supervisa cada rincón sin descanso.</p>
+                        <ul class="card-features">
+                            <li>✅ Cámaras HD / IP</li>
+                            <li>✅ Alertas al Celular</li>
+                            <li>✅ Grabación en Nube</li>
+                        </ul>
+                    </div>
+                    <div class="card-glow"></div>
                 </div>
 
-                <div class="timeline-item" data-category="work">
-                    <div class="timeline-node">⭐</div>
-                    <div class="timeline-content">
-                        <div class="timeline-year">Salud y Cumplimiento</div>
-                        <h3 class="timeline-title">Limpieza y Saneamiento</h3>
-                        <div class="timeline-company">Higiene Certificada</div>
-                        <p class="timeline-description">
-                            Servicio de limpieza diaria y desinfección programada en áreas comunes, oficinas y espacios públicos con equipamiento especializado y productos ecológicos, garantizando ambientes saludables que cumplen normativas sanitarias.
-                        </p>
-                        <div class="timeline-skills">
-                            <span class="timeline-skill">Desinfección</span>
-                            <span class="timeline-skill">Normativas</span>
-                            <span class="timeline-skill">Protocolos</span>
-                            <span class="timeline-skill">Profesional</span>
-                        </div>
-                        <div class="timeline-achievements">
-                            <div class="timeline-achievement">Cumplimiento de normas sanitarias</div>
-                            <div class="timeline-achievement">Equipos especializados de limpieza</div>
-                            <div class="timeline-achievement">Ambientes certificados y seguros</div>
-                        </div>
+                <div class="service-card" data-category="limpieza">
+                    <div class="card-icon-wrapper">
+                        <span class="card-icon">✨</span>
                     </div>
+                    <div class="card-content">
+                        <h3 class="card-title">Limpieza y Saneamiento</h3>
+                        <p class="card-desc">Higiene profesional para oficinas y condominios con protocolos certificados y productos ecológicos de alta gama.</p>
+                        <ul class="card-features">
+                            <li>✅ Desinfección COVID</li>
+                            <li>✅ Maquinaria Industrial</li>
+                            <li>✅ Personal Uniformado</li>
+                        </ul>
+                    </div>
+                    <div class="card-glow"></div>
                 </div>
 
-                <div class="timeline-item" data-category="education">
-                    <div class="timeline-node">🏆</div>
-                    <div class="timeline-content">
-                        <div class="timeline-year">Optimización Total</div>
-                        <h3 class="timeline-title"> Gestión de Estacionamientos</h3>
-                        <div class="timeline-company">Control Vehicular</div>
-                        <p class="timeline-description">
-                            Control automatizado de entradas y salidas, asignación inteligente de espacios y sistema de cobranza que maximiza eficiencia operativa.
-                        </p>
-                        <div class="timeline-skills">
-                            <span class="timeline-skill">Control Vehicular</span>
-                            <span class="timeline-skill">Parking</span>
-                            <span class="timeline-skill">Eficiencia</span>
-                            <span class="timeline-skill">Monitoreo</span>
-                        </div>
-                        <div class="timeline-achievements">
-                            <div class="timeline-achievement">Optimización de espacios disponibles</div>
-                            <div class="timeline-achievement">Reducción de conflictos y esperas</div>
-                            <div class="timeline-achievement"> Control de accesos riguroso y monitoreo</div>
-                        </div>
+                <div class="service-card" data-category="gestion">
+                    <div class="card-icon-wrapper">
+                        <span class="card-icon">🚗</span>
                     </div>
-                </div> 
+                    <div class="card-content">
+                        <h3 class="card-title">Gestión de Parking</h3>
+                        <p class="card-desc">Administración inteligente de estacionamientos, optimizando espacios y asegurando el flujo vehicular ordenado.</p>
+                        <ul class="card-features">
+                            <li>✅ Control de Tickets</li>
+                            <li>✅ Valet Parking</li>
+                            <li>✅ Ordenamiento Vial</li>
+                        </ul>
+                    </div>
+                    <div class="card-glow"></div>
+                </div>
+
             </div>
         </div>
     </section>
-
     <section id="portfolio" class="fade-in">
         <div class="container">
             <div class="section-header">
