--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 
 <body>
-    <nav id="navbar">
+<nav id="navbar">
         <div class="nav-container">
             <a href="#home" class="logo">
                 <img src="images/logo-grupoprotekta.png" class="logo-icon" alt="Logo Grupo Protekta">
@@ -60,7 +60,7 @@
                 <li><a href="#home">Inicio</a></li>
                 <li><a href="#about">Nosotros</a></li>
                 <li><a href="#skills">Habilidades</a></li>
-                <li><a href="#timeline">Servicios</a></li>
+                <li><a href="#services">Servicios</a></li>
                 <li><a href="#portfolio">Portafolio</a></li>
                 <li><a href="#contact">Contacto</a></li>
             </ul>
@@ -75,7 +75,7 @@
                 <li><a href="#home">Inicio</a></li>
                 <li><a href="#about">Nosotros</a></li>
                 <li><a href="#skills">Habilidades</a></li>
-                <li><a href="#timeline">Servicios</a></li>
+                <li><a href="#services">Servicios</a></li>
                 <li><a href="#portfolio">Portafolio</a></li>
                 <li><a href="#contact">Contacto</a></li>
             </ul>
