--- a/index.html
+++ b/index.html
@@ -1,52 +1,70 @@
-<!DOCTYPE html>
-<html lang="es">
 <head>
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <!-- Título SEO -->
-    <title>Grupo Protekta • Seguridad, Limpieza y Gestión Profesional en Perú</title>
+    <title>Grupo Protekta Integral • Seguridad, Limpieza y Gestión (Protekta Perú)</title>
 
-    <!-- Descripción SEO -->
-    <meta name="description" content="Grupo Protekta: Servicios de seguridad privada, limpieza, gestión de estacionamientos y administración de edificios en Perú. Protección profesional 24/7.">
+    <meta name="description" content="Grupo Protekta Integral: Expertos en seguridad privada, limpieza profesional y gestión de edificios. La confianza y calidad de Protekta a su servicio en todo el Perú.">
 
-    <!-- Keywords (ya no son muy usadas pero igual suman un poco) -->
-    <meta name="keywords" content="seguridad privada, vigilancia, limpieza, estacionamientos, administración de edificios, Grupo Protekta, Trujillo, Perú">
+    <meta name="keywords" content="Protekta, Protekta Integral, Grupo Protekta, seguridad privada trujillo, vigilancia, limpieza, gestion de estacionamientos, Perú">
 
-    <!-- Autor -->
-    <meta name="author" content="Grupo Protekta Integral">
+    <meta name="author" content="Grupo Protekta Integral S.A.C.">
 
-    <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/logo-grupoprotekta.png">
 
-    <!-- CSS -->
     <link rel="stylesheet" href="tooplate-titan-style.css">
+    
+    <link rel="canonical" href="https://www.grupoprotekta.pe" />
 
-    <!-- Google Structured Data (SEO Pro Nivel Dios) -->
+    <meta property="og:title" content="Grupo Protekta Integral - Seguridad y Servicios">
+    <meta property="og:description" content="Soluciones integrales de seguridad, limpieza y gestión. Protekta: Tu socio estratégico.">
+    <meta property="og:image" content="https://www.grupoprotekta.pe/images/logo-grupoprotekta.png">
+    <meta property="og:url" content="https://www.grupoprotekta.pe">
+    <meta property="og:type" content="website">
+
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "Grupo Protekta",
-      "image": "https://www.tu-dominio.com/images/logo-grupoprotekta.png",
-      "url": "https://www.tu-dominio.com",
+      "name": "Grupo Protekta Integral",
+      "alternateName": ["Protekta", "Protekta Perú", "Grupo Protekta"], 
+      "image": "https://www.grupoprotekta.pe/images/logo-grupoprotekta.png",
+      "url": "https://www.grupoprotekta.pe",
       "telephone": "+51977781573",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "Jr. Ayacucho 707",
         "addressLocality": "Trujillo",
         "addressRegion": "La Libertad",
-        "addressCountry": "Perú"
+        "addressCountry": "PE"
       },
-      "description": "Servicios de seguridad privada, limpieza profesional, gestión de estacionamientos y administración integral de edificios en Perú.",
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "-8.111995", 
+        "longitude": "-79.028688"
+      },
+      "description": "Somos Protekta Integral, líderes en servicios de seguridad privada, limpieza y administración de inmuebles.",
+      "priceRange": "$$",
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+          "opens": "08:00",
+          "closes": "18:00"
+        },
+        {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": "Saturday",
+            "opens": "09:00",
+            "closes": "13:00"
+        }
+      ],
       "sameAs": [
         "https://facebook.com/GrupoProtektaIntegral",
         "https://instagram.com/grupoprotekta"
       ]
     }
     </script>
-
 </head>
 
 <body>
