--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
     }
     </script>
 </head>
+    <a href="https://wa.me/51977781573?text=Hola%20Protekta,%20vengo%20desde%20su%20web%20y%20quiero%20cotizar"
+    class="whatsapp-float"
+    target="_blank"
+    rel="noopener"
+    aria-label="Chatear por WhatsApp">
+    <span class="whatsapp-icon">💬</span>
+    </a>
 
 <body>
 <nav id="navbar">
