--- a/index.html
+++ b/index.html
@@ -1,111 +1,122 @@
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>Grupo Protekta Integral • Seguridad, Limpieza y Gestión (Protekta Perú)</title>
+  <title>Grupo Protekta Integral • Seguridad, Limpieza y Gestión (Protekta Perú)</title>
 
-    <meta name="description" content="Grupo Protekta Integral: Expertos en seguridad privada, limpieza profesional y gestión de edificios. La confianza y calidad de Protekta a su servicio en todo el Perú.">
+  <meta name="description" content="Grupo Protekta Integral: Expertos en seguridad privada, limpieza profesional y gestión de edificios. La confianza y calidad de Protekta a su servicio en todo el Perú.">
+  <meta name="keywords" content="Protekta, Protekta Integral, Grupo Protekta, seguridad privada trujillo, vigilancia, limpieza, gestion de estacionamientos, Perú">
+  <meta name="author" content="Grupo Protekta Integral S.A.C.">
 
-    <meta name="keywords" content="Protekta, Protekta Integral, Grupo Protekta, seguridad privada trujillo, vigilancia, limpieza, gestion de estacionamientos, Perú">
+  <!-- FAVICON -->
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/icons8-favicon-100.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="images/icons8-favicon-100.png">
+  <link rel="apple-touch-icon" href="images/icons8-favicon-100.png">
 
-    <meta name="author" content="Grupo Protekta Integral S.A.C.">
+  <link rel="stylesheet" href="tooplate-titan-style.css">
 
-    <link rel="icon" type="image/png" href="images/logo-grupoprotekta.png">
+  <link rel="canonical" href="https://www.grupoprotekta.pe" />
 
-    <link rel="stylesheet" href="tooplate-titan-style.css">
-    
-    <link rel="canonical" href="https://www.grupoprotekta.pe" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Grupo Protekta Integral - Seguridad y Servicios">
+  <meta property="og:description" content="Soluciones integrales de seguridad, limpieza y gestión. Protekta: Tu socio estratégico.">
+  <meta property="og:image" content="https://www.grupoprotekta.pe/images/logo-grupoprotekta.png">
+  <meta property="og:url" content="https://www.grupoprotekta.pe">
+  <meta property="og:type" content="website">
 
-    <meta property="og:title" content="Grupo Protekta Integral - Seguridad y Servicios">
-    <meta property="og:description" content="Soluciones integrales de seguridad, limpieza y gestión. Protekta: Tu socio estratégico.">
-    <meta property="og:image" content="https://www.grupoprotekta.pe/images/logo-grupoprotekta.png">
-    <meta property="og:url" content="https://www.grupoprotekta.pe">
-    <meta property="og:type" content="website">
-
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LocalBusiness",
-      "name": "Grupo Protekta Integral",
-      "alternateName": ["Protekta", "Protekta Perú", "Grupo Protekta"], 
-      "image": "https://www.grupoprotekta.pe/images/logo-grupoprotekta.png",
-      "url": "https://www.grupoprotekta.pe",
-      "telephone": "+51977781573",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Jr. Ayacucho 707",
-        "addressLocality": "Trujillo",
-        "addressRegion": "La Libertad",
-        "addressCountry": "PE"
+  <!-- JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "name": "Grupo Protekta Integral",
+    "alternateName": ["Protekta", "Protekta Perú", "Grupo Protekta"],
+    "image": "https://www.grupoprotekta.pe/images/logo-grupoprotekta.png",
+    "url": "https://www.grupoprotekta.pe",
+    "telephone": "+51977781573",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Jr. Ayacucho 707",
+      "addressLocality": "Trujillo",
+      "addressRegion": "La Libertad",
+      "addressCountry": "PE"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "-8.111995",
+      "longitude": "-79.028688"
+    },
+    "description": "Somos Protekta Integral, líderes en servicios de seguridad privada, limpieza y administración de inmuebles.",
+    "priceRange": "$$",
+    "openingHoursSpecification": [
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+        "opens": "08:00",
+        "closes": "18:00"
       },
-      "geo": {
-        "@type": "GeoCoordinates",
-        "latitude": "-8.111995", 
-        "longitude": "-79.028688"
-      },
-      "description": "Somos Protekta Integral, líderes en servicios de seguridad privada, limpieza y administración de inmuebles.",
-      "priceRange": "$$",
-      "openingHoursSpecification": [
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
-          "opens": "08:00",
-          "closes": "18:00"
-        },
-        {
-            "@type": "OpeningHoursSpecification",
-            "dayOfWeek": "Saturday",
-            "opens": "09:00",
-            "closes": "13:00"
-        }
-      ],
-      "sameAs": [
-        "https://facebook.com/GrupoProtektaIntegral",
-        "https://instagram.com/grupoprotekta"
-      ]
-    }
-    </script>
+      {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": "Saturday",
+        "opens": "09:00",
+        "closes": "13:00"
+      }
+    ],
+    "sameAs": [
+      "https://facebook.com/GrupoProtektaIntegral",
+      "https://instagram.com/grupoprotekta"
+    ]
+  }
+  </script>
 </head>
-    <a href="https://wa.me/51977781573?text=Hola%20Protekta,%20vengo%20desde%20su%20web%20y%20quiero%20cotizar"
-    class="whatsapp-float"
-    target="_blank"
-    rel="noopener"
-    aria-label="Chatear por WhatsApp">
-    <span class="whatsapp-icon">💬</span>
-    </a>
 
 <body>
-<nav id="navbar">
-        <div class="nav-container">
-            <a href="#home" class="logo">
-                <img src="images/logo-grupoprotekta.png" class="logo-icon" alt="Logo Grupo Protekta">
-                <div class="logo-text">GRUPO PROTEKTA</div>
-            </a>
-            <ul class="nav-links">
-                <li><a href="#home">Inicio</a></li>
-                <li><a href="#about">Nosotros</a></li>
-                <li><a href="#skills">Habilidades</a></li>
-                <li><a href="#services">Servicios</a></li>
-                <li><a href="#portfolio">Portafolio</a></li>
-                <li><a href="#contact">Contacto</a></li>
-            </ul>
-            <div class="mobile-menu-btn" id="mobileMenuBtn">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-        <div class="mobile-nav" id="mobileNav">
-            <ul>
-                <li><a href="#home">Inicio</a></li>
-                <li><a href="#about">Nosotros</a></li>
-                <li><a href="#skills">Habilidades</a></li>
-                <li><a href="#services">Servicios</a></li>
-                <li><a href="#portfolio">Portafolio</a></li>
-                <li><a href="#contact">Contacto</a></li>
-            </ul>
-        </div>
-    </nav>
+
+  <!-- BOTÓN FLOTANTE WHATSAPP (sin mensaje) -->
+  <a href="https://wa.me/51977781573"
+     class="whatsapp-float"
+     target="_blank"
+     rel="noopener"
+     aria-label="Chatear por WhatsApp">
+    <span class="whatsapp-icon">💬</span>
+  </a>
+
+  <nav id="navbar">
+    <div class="nav-container">
+      <a href="#home" class="logo">
+        <img src="images/logo-grupoprotekta.png" class="logo-icon" alt="Logo Grupo Protekta">
+        <div class="logo-text">GRUPO PROTEKTA</div>
+      </a>
+
+      <ul class="nav-links">
+        <li><a href="#home">Inicio</a></li>
+        <li><a href="#about">Nosotros</a></li>
+        <li><a href="#skills">Habilidades</a></li>
+        <li><a href="#services">Servicios</a></li>
+        <li><a href="#portfolio">Portafolio</a></li>
+        <li><a href="#contact">Contacto</a></li>
+      </ul>
+
+      <div class="mobile-menu-btn" id="mobileMenuBtn">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+
+    <div class="mobile-nav" id="mobileNav">
+      <ul>
+        <li><a href="#home">Inicio</a></li>
+        <li><a href="#about">Nosotros</a></li>
+        <li><a href="#skills">Habilidades</a></li>
+        <li><a href="#services">Servicios</a></li>
+        <li><a href="#portfolio">Portafolio</a></li>
+        <li><a href="#contact">Contacto</a></li>
+      </ul>
+    </div>
+  </nav>
+
 
     <section id="home" class="hero">
         <div class="hero-bg-animation">
